# EdgeUtilities

./: .gitignore  README.md  index.html  package-lock.json  package.json  repo_list.json  setup.ps1
.github/skills/regen-signing-key/: SKILL.md
.github/skills/release/: SKILL.md
.github/skills/setup/: SKILL.md
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: installs.rs  launcher.rs  mod.rs  processes.rs  repos.rs  scripts.rs
src/components/: StatusBar.tsx
src/tabs/: AboutTab.tsx  InstallsTab.tsx  LauncherTab.tsx  ProcessesTab.tsx  ReposTab.tsx  ScriptsTab.tsx
